# cross-building-with-conan

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  main.cc
.profiles/: android-arm64-v8a-abi21  android-armeabi-v7a-abi21  android-x86-abi21  android-x86_64-abi21  ios-arm64-iphoneos  ios-arm64-iphonesimulator  ios-armv7-iphoneos  ios-i386-iphonesimulator  ios-x86_64-iphonesimulator  macos-arm64  macos-x86_64
